--- a/.gitignore
+++ b/.gitignore
@@ -732,3 +732,4 @@ sketch
 # Additional files built by Visual Studio
 
 # End of https://www.toptal.com/developers/gitignore/api/visualstudio,csharp,react,node
+React.Net.Simple/wwwroot/scripts
