--- a/React.Net.Simple/_client/package.json
+++ b/React.Net.Simple/_client/package.json
@@ -5,8 +5,8 @@
   "dependencies": {
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
-    "react-scripts": "4.0.3",
-    "react-habitat": "^1.0.1" 
+    "react-habitat": "^1.0.1",
+    "react-scripts": "4.0.3"
   },
   "scripts": {
     "storybook": "start-storybook -p 6006 -s public",
