--- a/React.Net.Simple/_client/package.json
+++ b/React.Net.Simple/_client/package.json
@@ -11,8 +11,8 @@
   "scripts": {
     "storybook": "start-storybook -p 6006 -s public",
     "build-storybook": "build-storybook -s public",
-    "pack": "webpack --mode=production",
-    "pack-dev": "webpack --mode=development",
+    "pack": "webpack --mode=production --config ./webpack/prod.config.js",
+    "pack:dev": "webpack --mode=development --config ./webpack/dev.config.js",
     "stats": "webpack --mode=production --profile --json > stats.json"
   },
   "browserslist": {
@@ -35,6 +35,7 @@
     "@storybook/preset-create-react-app": "^3.2.0",
     "@storybook/react": "^6.3.12",
     "webpack": "^4.46.0",
+    "webpack-bundle-analyzer": "^4.5.0",
     "webpack-cli": "^3.3.12"
   }
 }
